--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "@supabase/supabase-js": "^2.84.0",
+            "@types/cheerio": "^0.22.35",
+            "@types/uuid": "^10.0.0",
+            "cheerio": "^1.1.2",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
@@ -47,6 +50,7 @@
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
+            "uuid": "^13.0.0",
             "vaul": "^1.1.2"
       },
       "devDependencies": {
@@ -55,6 +59,7 @@
             "@types/node": "^20.10.0",
             "@types/react": "^19.1.13",
             "@types/react-dom": "^19.1.9",
+            "@vercel/node": "^5.5.12",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "jsdom": "^27.2.0",
             "typescript": "^5.9.2",
