--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "framer-motion": "^12.23.24",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next": "^15.5.3",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
+            "react-confetti": "^6.4.0",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
@@ -61,7 +63,11 @@
             "@types/react-dom": "^19.1.9",
             "@vercel/node": "^5.5.12",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "autoprefixer": "^10.4.22",
             "jsdom": "^27.2.0",
+            "postcss": "^8.5.6",
+            "tailwindcss": "^3.4.18",
+            "tailwindcss-animate": "^1.0.7",
             "typescript": "^5.9.2",
             "vite": "6.3.5",
             "vitest": "^4.0.14"
