--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
             "react-confetti": "^6.4.0",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
+            "react-helmet-async": "^2.0.5",
             "react-hook-form": "^7.55.0",
             "react-resizable-panels": "^2.1.7",
             "react-router-dom": "^7.9.6",
@@ -62,6 +63,7 @@
             "@types/node": "^20.10.0",
             "@types/react": "^19.1.13",
             "@types/react-dom": "^19.1.9",
+            "@types/react-helmet-async": "^1.0.1",
             "@vercel/node": "^5.5.12",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "autoprefixer": "^10.4.22",
