--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,18 @@
 {
     "rewrites": [
         {
+            "source": "/sitemap.xml",
+            "destination": "/sitemap.xml"
+        },
+        {
+            "source": "/robots.txt",
+            "destination": "/robots.txt"
+        },
+        {
+            "source": "/google(.*).html",
+            "destination": "/google$1.html"
+        },
+        {
             "source": "/api/:path*",
             "destination": "/api/:path*"
         },
