--- a/package.json
+++ b/package.json
@@ -78,8 +78,9 @@
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build",
+            "build": "npm run generate:sitemap && vite build",
             "test": "vitest",
-            "generate:env-types": "node scripts/generate-env-types.js"
+            "generate:env-types": "node scripts/generate-env-types.js",
+            "generate:sitemap": "node scripts/generate-sitemap.js"
       }
 }
